Refactor AircraftMappers to use Stream.toList() for obtaining an unmodifiable list 🧰